--- a/public/upnl/css/style.css
+++ b/public/upnl/css/style.css
@@ -10,6 +10,30 @@
 }
 
 
+@font-face {
+	font-family: "Flaticon";
+	src: url("../fonts/flaticon/Flaticon.eot?v=5");
+	src: url("../fonts/flaticon/Flaticon.eot?v=5#iefix")
+			format("embedded-opentype"),
+		url("../fonts/flaticon/Flaticon.woff?v=5") format("woff"),
+		url("../fonts/flaticon/Flaticon.ttf?v=5") format("truetype"),
+		url("../fonts/flaticon/Flaticon.svg?v=5#Flaticon") format("svg");
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "netmi";
+	src:url("../fonts/flaticon/netmi.eot");
+	src:url("../fonts/flaticon/netmi.eot?#iefix") format("embedded-opentype"),
+	  url("../fonts/flaticon/netmi.woff") format("woff"),
+	  url("../fonts/flaticon/netmi.ttf") format("truetype"),
+	  url("../fonts/flaticon/netmi.svg#netmi") format("svg");
+	font-weight: normal;
+	font-style: normal;
+ 
+ }
+
 
 [data-icon]:before {
 	font-family: "netmi" !important;
