--- a/public/assets/theme/css/style.css
+++ b/public/assets/theme/css/style.css
@@ -22,7 +22,7 @@
 	src: url("../fonts/flaticon/Flaticon.eot?v=5");
 	src: url("../fonts/flaticon/Flaticon.eot?v=5#iefix")
 			format("embedded-opentype"),
-		url("../fonts/flaticon/Flaticon.woff?v=5") format("woff"),
+		url("../fonts/flaticon/Flaticon.woff") format("woff"),
 		url("../fonts/flaticon/Flaticon.ttf?v=5") format("truetype"),
 		url("../fonts/flaticon/Flaticon.svg?v=5#Flaticon") format("svg");
 	font-weight: normal;
